[package]
name = "icmp-sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-tun = "0.11.5"
etherparse = "0.15.0"
futures = "0.3.28"
local-ip-address = "0.6.1"
